test/2/type/expr-bind-ann.err
test/2/type/expr-bind-ann.ploy:2:11-12: type error: annotated: actual type is not expected type. actual type: Int
|   x:Str = 0
            ~
test/2/type/expr-bind-ann.ploy:2:5-8: note: expected type: Str
|   x:Str = 0
      ~~~
