test/2/type/expr-bind-ann.ploy
main = {
  x:Str = 0
  outL.x
}
